feat: add docs #1

--- a/doc/bibliography.bib
+++ b/doc/bibliography.bib
@@ -1,6 +1,6 @@
-@webpage{githubrepo,
-  author = {Jan Antala},
-  title = {Latex Seed},
-  year = {Jul 28, 2013},
-  url = {https://github.com/janantala/latex-seed}
+@webpage{kdd,
+  author = {KDDCUP},
+  title = {Query Categorization},
+  year = {2005},
+  url = {http://www.sigkdd.org/kdd-cup-2005-internet-user-search-query-categorization}
 }
