--- a/doc/document.tex
+++ b/doc/document.tex
@@ -48,13 +48,13 @@
   \input{title.tex}
 
   %%% INTRO %%%
-  \newpage
-  \pagenumbering{roman}
-  \setcounter{page}{1}
+  % \newpage
+  % \pagenumbering{roman}
+  % \setcounter{page}{1}
   \input{intro.tex}
 
   %%% CONTENT %%%
-  \newpage
+  % \newpage
   \onehalfspacing
   \setlength{\parindent}{1cm}
   \pagenumbering{arabic}
@@ -62,14 +62,14 @@
   \input{content.tex}
 
   %%% BIBLIOGRAPHY %%%
-  \newpage
-  \bibliographystyle{plainnat}
-  \bibliography{bibliography.bib}
+  % \newpage
+  % \bibliographystyle{plainnat}
+  % \bibliography{bibliography.bib}
 
   %%% APPENDIX %%%
-  \begin{appendices}
-  \newpage
-  \input{appendix.tex}
-  \end{appendices}
+  % \begin{appendices}
+  % \newpage
+  % \input{appendix.tex}
+  % \end{appendices}
 
 \end{document}
