--- a/doc/title.tex
+++ b/doc/title.tex
@@ -1,28 +1,13 @@
-\setlength{\parindent}{0cm}
-\thispagestyle{empty}
-
-\topskip0pt
-\vspace*{\fill}
-
 \begin{center}
 
   \begin{LARGE}
-    \textmd{\LaTeX\ seed}
+    \textmd{Rozpoznanie rukou písaných znakov}
   \end{LARGE}
 
   \vspace*{0.5cm}
 
   \begin{Large}
-  v0.0.1
-  \end{Large}
-  
+  Ján Antala
+  \end{Large}  
 
 \end{center}
-
-\vspace*{\fill}
-
-\begin{flushleft}
-\large{Author: Jan Antala} \\
-\large{Web: \url{http://janantala.com}} \\
-\large{License: MIT} \\
-\end{flushleft}
