--- a/doc/intro.tex
+++ b/doc/intro.tex
@@ -1,7 +1,9 @@
-\newpage
-\thispagestyle{empty}
-\setcounter{tocdepth}{3}
-\tableofcontents
+% \vfill
+
+% \newpage
+% \thispagestyle{empty}
+% \setcounter{tocdepth}{3}
+% \tableofcontents
 
 % \newpage 
 % \thispagestyle{empty}
